# Sticky_Note_QT

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  sticky_note.desktop  version.h.in
.github/workflows/: tag_and_release.yml
include/: IWindow.h  shared.h
lib/main_window/: main_window.cpp  main_window.h
lib/menage_window/: menage_window.cpp  menage_window.h
lib/note_action/: note_action.cpp  note_action.h
lib/note_window/: note_markdown_processor.cpp  note_markdown_processor.h  note_syntax_highlighter.cpp  note_syntax_highlighter.h  note_window.cpp  note_window.h
lib/save_handler/: save_handler.cpp  save_handler.h
lib/scaling_button/: scaling_button.cpp  scaling_button.h
packaging/: build_appimage.sh
src/: main.cpp
